--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,6 @@ jobs:
       - name: Deploy 🚀
         uses: isaacwangombe/github-pages-deploy-action@v4.3.3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.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 }}
           BRANCH: public # The branch the action should deploy to.
           FOLDER: out # The folder the action should deploy.
